@@ -1339,15 +1339,9 @@ do_mount (GVfsBackend *backend,
     {
       GAskPasswordFlags flags;
       if (prompt == NULL)
-	{
-	  if (ftp->has_initial_user)
-	    /* Translators: the first %s is the username, the second the host name */
-	    prompt = g_strdup_printf (_("Enter password for ftp as %s on %s"), ftp->user, host);
-	  else
-	    /* translators: %s here is the hostname */
-	    prompt = g_strdup_printf (_("Enter password for ftp on %s"), host);
-	}
-	  
+	/* translators: %s here is the hostname */
+	prompt = g_strdup_printf (_("Enter password for ftp on %s"), host);
+
       flags = G_ASK_PASSWORD_NEED_PASSWORD;
         
       if (!ftp->has_initial_user)
